--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,5 @@ flask-migrate==1.6.0
 python-dateutil==2.4.2
 flask-bcrypt==0.7.1
 flask-restful==0.3.4
-psycopg2=2.6.1
+psycopg2==2.6.1
 gunicorn==19.4.1
